--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,20 @@
 [metadata]
 name = loss_checker
-version = 0.5
+version = 0.5.1
 author = Dmitry Yakovlev
 author_email = opensuse12@gmail.com
 description = Loss Checker
 licence = MIT
-url = 
+url = https://github.com/jok4r/loss_checker
 
 [options]
 python_requires = >=3.7
+include_package_data = True
 packages=find:
 install_requires =
     ovcfg
     oe_common >= 1.3.0
+
+[options.package_data]
+* = cfg/*
+hello = *.msg
