--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [metadata]
 name = loss_checker
-version = 0.6
+version = 0.6.1
 author = Dmitry Yakovlev
 author_email = opensuse12@gmail.com
 description = Loss Checker
+long_description = file: README.md
+long_description_content_type = text/markdown
 licence = MIT
 url = https://github.com/jok4r/loss_checker
 
